დავამატე სლაიდეტი და შევიტანე მცირე ცვლილებები ჰტმლ და ცსს ში

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="https://www.turebi.ge/templatesv2/assets/img/logo.svg" alt="turebi.ge" class="hide-576">
     </div>
     <div class="registration">
-        <a href="registration/registration.html">
+        <a href="registration/registration.html" target="_blank">
             <div class="prof-avatar">
                 <img src="https://www.turebi.ge/templatesv2/assets/img/prof-avatar.svg" alt="Profile Avatar">
             </div>
@@ -60,5 +60,20 @@
         <h3>სავიზო <br> მხარდაჭერა</h3>
     </div>
 </section>
+
+<div class="slider">
+    <div class="slides">
+        <img class="slide" src="suratebi/tbilisi.jpg" alt="Image 1">
+        <img class="slide" src="suratebi/batumi.jpg" alt="Image 2">
+        <img class="slide" src="suratebi/svaneti.jpg" alt="Image 3">
+        <img class="slide" src="suratebi/gudauri.jpg" alt="Image 4">
+        <img class="slide" src="suratebi/racha.jpg" alt="Image 5">
+    </div>
+    <button class="prev" onclick="prevSlide()">&#10094</button>
+    <button class="next" onclick="nextSlide()">&#10095</button>
+</div>
+
+<script src="script.js"></script>
+
 </body>
 </html>
