davamate slaideris teqstebi da css shi shevcvale clasebi

--- a/index.html
+++ b/index.html
@@ -63,11 +63,31 @@
 
 <div class="slider">
     <div class="slides">
-        <img class="slide" src="suratebi/tbilisi.jpg" alt="Image 1">
-        <img class="slide" src="suratebi/batumi.jpg" alt="Image 2">
-        <img class="slide" src="suratebi/svaneti.jpg" alt="Image 3">
-        <img class="slide" src="suratebi/gudauri.jpg" alt="Image 4">
-        <img class="slide" src="suratebi/racha.jpg" alt="Image 5">
+        <div class="slide">
+            <img src="suratebi/tbilisi.jpg" alt="Image 1">
+            <div class="text-overlay">მოხარულები ვართ წარმოგიდგინოთ საქართველოს ულამაზესი კუთხეები.
+                ჩვენ გთავაზობთ უნიკალურ და დაუვიწყარ მოგზაურობას მთებში, ისტორიულ ძეგლებსა და სანაპიროებზე</div>
+        </div>
+        <div class="slide">
+            <img src="suratebi/batumi.jpg" alt="Image 2">
+            <div class="text-overlay">მოხარულები ვართ წარმოგიდგინოთ საქართველოს ულამაზესი კუთხეები.
+                ჩვენ გთავაზობთ უნიკალურ და დაუვიწყარ მოგზაურობას მთებში, ისტორიულ ძეგლებსა და სანაპიროებზე</div>
+        </div>
+        <div class="slide">
+            <img src="suratebi/svaneti.jpg" alt="Image 3">
+            <div class="text-overlay">მოხარულები ვართ წარმოგიდგინოთ საქართველოს ულამაზესი კუთხეები.
+                ჩვენ გთავაზობთ უნიკალურ და დაუვიწყარ მოგზაურობას მთებში, ისტორიულ ძეგლებსა და სანაპიროებზე</div>
+        </div>
+        <div class="slide">
+            <img src="suratebi/gudauri.jpg" alt="Image 4">
+            <div class="text-overlay">მოხარულები ვართ წარმოგიდგინოთ საქართველოს ულამაზესი კუთხეები.
+                ჩვენ გთავაზობთ უნიკალურ და დაუვიწყარ მოგზაურობას მთებში, ისტორიულ ძეგლებსა და სანაპიროებზე</div>
+        </div>
+        <div class="slide">
+            <img src="suratebi/racha.jpg" alt="Image 5">
+            <div class="text-overlay">მოხარულები ვართ წარმოგიდგინოთ საქართველოს ულამაზესი კუთხეები.
+                ჩვენ გთავაზობთ უნიკალურ და დაუვიწყარ მოგზაურობას მთებში, ისტორიულ ძეგლებსა და სანაპიროებზე</div>
+        </div>
     </div>
     <button class="prev" onclick="prevSlide()">&#10094</button>
     <button class="next" onclick="nextSlide()">&#10095</button>
