registratis ggverdze avtorizaciis damateba

--- a/registration/registration.html
+++ b/registration/registration.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>რეგისტრაცია</title>
+    <title>რეგისტრაცია და ავტორიზაცია</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- ავტორიზაციის ფორმა -->
+<header>
+    <h1>ავტორიზაცია</h1>
+</header>
+
+<form id="authForm" action="#" method="POST">
+    <div class="form-group">
+        <label for="username">სახელი ან ელფოსტა:</label>
+        <input type="text" id="username" name="username" placeholder="შეიყვანეთ სახელი ან ელფოსტა" required>
+    </div>
+
+    <div class="form-group">
+        <label for="password">პაროლი:</label>
+        <input type="password" id="password" name="password" placeholder="შეიყვანეთ პაროლი" required>
+    </div>
+
+    <button type="submit">შესვლა</button>
+    <div class="error-message" id="errorMessage" style="display: none;">გთხოვთ შეავსოთ ყველა ველი სწორად.</div>
+</form>
+
+<hr> <!-- Divider between Authorization and Registration -->
+
+<!-- რეგისტრაციის ფორმა -->
 <header>
     <h1>რეგისტრაცია</h1>
 </header>
