ganaxlebuli indes/registration html da css

--- a/registration/registration.html
+++ b/registration/registration.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br>
+
+<hr>
+<nav>
+    <ul>
+        <li><a href="#">მთავარი</a></li>
+        <li><a href="#">ძირითადი ინფორმაცია</a></li>
+        <li><a href="#">სასტუმროები</a></li>
+        <li><a href="#">ტრანსპორტი</a></li>
+        <li><a href="#">კონტაქტი</a></li>
+    </ul>
+</nav>
+<hr>
 <!-- ავტორიზაციის ფორმა -->
 <header>
     <h1>ავტორიზაცია</h1>
