davamate informaciis/sastumroebis/transportis/kontaktis gverdebi

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <hr>
 <nav>
     <ul>
-        <li><a href="#">ძირითადი ინფორმაცია</a></li>
-        <li><a href="#">სასტუმროები</a></li>
-        <li><a href="#">ტრანსპორტი</a></li>
-        <li><a href="#">კონტაქტი</a></li>
+        <li><a href="maininformation.html">ძირითადი ინფორმაცია</a></li>
+        <li><a href="hotel.html">სასტუმროები</a></li>
+        <li><a href="transport.html">ტრანსპორტი</a></li>
+        <li><a href="contact.html">კონტაქტი</a></li>
     </ul>
 </nav>
 <br>
