--- a/registration/registration.html
+++ b/registration/registration.html
@@ -7,20 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<hr>
-<nav>
-    <ul>
-        <li><a href="#">მთავარი</a></li>
-        <li><a href="#">ძირითადი ინფორმაცია</a></li>
-        <li><a href="#">სასტუმროები</a></li>
-        <li><a href="#">ტრანსპორტი</a></li>
-        <li><a href="#">კონტაქტი</a></li>
-    </ul>
-</nav>
-<hr>
 <!-- ავტორიზაციის ფორმა -->
 <header>
     <h1>ავტორიზაცია</h1>
@@ -41,7 +29,7 @@
     <div class="error-message" id="errorMessage" style="display: none;">გთხოვთ შეავსოთ ყველა ველი სწორად.</div>
 </form>
 
-<hr> <!-- Divider between Authorization and Registration -->
+<hr>
 
 <!-- რეგისტრაციის ფორმა -->
 <header>
@@ -67,7 +55,7 @@
     </div>
 
     <div class="form-group">
-        <label for="date">რეგისტრაციის თარიღი:</label>
+        <label for="date">დაბადების თარიღი:</label>
         <input type="date" id="date" name="date" required>
     </div>
 
