Sheicvala registracia da avtorizaciis gverdebi da ganxlda registraciis js

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="logo">
         <img src="https://www.turebi.ge/templatesv2/assets/img/logo.svg" alt="turebi.ge" class="hide-576">
     </div>
-    <div class="registration">
-        <a href="registration/registration.html" target="_blank">
+    <div class="login">
+        <a href="registration-avtorization/login.html" target="_blank">
             <div class="prof-avatar">
                 <img src="https://www.turebi.ge/templatesv2/assets/img/prof-avatar.svg" alt="Profile Avatar">
             </div>
